service added for redis'servive 'service redis_6379 status'

--- a/roles/redis/defaults/main.yml
+++ b/roles/redis/defaults/main.yml
@@ -25,7 +25,8 @@ redis_as_service: true
 # Add local facts to /etc/ansible/facts.d for Redis
 redis_local_facts: true
 # Service name
-redis_service_name: "redis_{{ redis_port }}"
+redis_service_name: redis_6379
+
 
 ## Networking/connection options
 redis_bind: 0.0.0.0
